--- a/index.css
+++ b/index.css
@@ -1,111 +1,5 @@
-
-* {
+p {
     font-family: 'Petit Formal Script', cursive;
-}
-
-@media (max-width: 800px) {
-    #holdPic {
-        padding: 2%;
-    }
-
-    .card {
-        margin: 4%;
-    }
-}
-
-/* remove scrollbar from page */
-body {
-    -ms-overflow-style: none;  /* IE 10+ */
-    overflow: -moz-scrollbars-none;  /* Firefox */
-}
-
-::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-}
-
-/* first page, welcome */
-#homeContainer {
-    background-color: white;
-    /*background-attachment: fixed;
-    background-size: cover;*/
-    min-height: 100vh;
-    font-size: 7.5vh;
-    position: relative;
+    font-size: 4vh;
     text-align: right;
-}
-
-#homeWords {
-    position: absolute;
-    right: 10%;
-    top: 20%;
-    color: #000000;
-}
-
-/* skills page */
-#skillsContainer {
-    background-color: white;
-    /*background-size: cover;*/
-    min-height: 100vh;
-    font-size: 6vh;
-    padding-top: 5%;
-    text-align: center;
-}
-
-#imgContainer {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding: 8% 0 4% 0;
-}
-
-#holdPic {
-    width: 200px;
-}
-
-.pic {
-    max-width: 170px;
-    max-height: 170px;
-}
-
-/* show off my projects */
-#projectsContainer {
-    background-color: white;
-    /*background-size: cover;*/
-    min-height: 100vh;
-}
-
-#projectsContainer {
-    font-size: 6vh;
-    text-align: center;
-    padding-top: 5%;
-}
-
-#cardsContainer {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding: 5%;
-}
-
-.card {
-    width: 350px;
-}
-
-.card-text {
-    font-size: 3.5vh;
-}
-
-/* last section */
-#endingContainer {
-    background-color: white;
-    height: 100vh;
-    /*background-size: cover;
-    background-attachment: fixed;
-    background-position: center;*/
-}
-
-#endingContainer p {
-    font-size: 6vh;
-    text-align: center;
-    padding-top: 5%;
 }
