--- a/index.css
+++ b/index.css
@@ -14,8 +14,7 @@ body {
 
 /*  this is the styling for the static background */
 #focusPart {
-    border: 1px solid red;
-    background: url('');
+    background: url('./pictures/water.png');
     background-attachment: fixed;
     background-size: cover;
     height: 100vh;
@@ -25,8 +24,7 @@ body {
 
 /* this is the styling for the scrolling content*/
 #scrollyPart {
-    border: 1px solid blue;
-    background-color: mistyrose;
+    background-color: white;
     opacity: 0.7;
     position: absolute;
     top: 15%;
